# cloveri_vacancies_git

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 2023_07_06_1746_init_db__83598d4afaab.py
app/: initial_data.py  main.py  session.py
app/api/: api.py  deps.py  message_manager.py
app/api/endpoints/: vacancies.py
app/core/: config.py
app/db/: dal.py  models.py
app/schemas/: auth.py  shared.py  user_response.py  vacancy.py  vacancy_api.py  vacancy_notify.py  vacancy_response.py  vacancy_skill.py
app/tests/: conftest.py  fixtures.py  test_auth.py  test_create_vacancies.py  test_creates_response.py  test_delete_vacancies.py  test_edit_vacancies.py  test_get_response_id.py  test_get_user_responses.py  test_get_user_responses_v2.py  test_get_vacancies.py  test_get_vacancy_responses.py  test_signer.py
app/utils/: notifications.py  singer.py
